--- a/_posts/2016-12-27-glide.markdown
+++ b/_posts/2016-12-27-glide.markdown
@@ -97,4 +97,4 @@ public class MainActivity extends AppCompatActivity {
 
 > ##### 아래의 링크에서 전체 프로젝트를 확인하실 수 있습니다.
 
-[![](https://jitpack.io/w/img/github-logo.png){:height="50px" width="120px"}](https://github.com/devchai/GlideSample)
+[![](https://jitpack.io/w/img/github-logo.png){:height="50px" width="120px"}](https://github.com/devchai/GlideSample){: target="_blank"}
