--- a/_posts/2016-12-27-glide.markdown
+++ b/_posts/2016-12-27-glide.markdown
@@ -92,7 +92,7 @@ public class MainActivity extends AppCompatActivity {
 }  
 ```  
 
-위와 같이 이미지 로드를 간단한 게 할 수 있어 좋은 라이브러리이지만 이미지 관련 개발을 하시다 보면 메모리 관리 때문에 Resize 와 같은 작업들을 하신 경험이 있을 텐데요 *OOM*{: style="color:red"} 관리를 Glide에서 해준다는 것이 가장 장점 같네요.
+위와 같이 이미지 로드를 간단하게 할 수 있어 좋은 라이브러리이지만 이미지 관련 개발을 하시다 보면 메모리 관리 때문에 Resize 와 같은 작업들을 하신 경험이 있을 텐데요 *OOM*{: style="color:red"} 관리를 Glide에서 해준다는 것이 가장 장점 같네요.
 
 
 > ##### 아래의 링크에서 전체 프로젝트를 확인하실 수 있습니다.
