--- a/_posts/2018-11-07-pic-01.markdown
+++ b/_posts/2018-11-07-pic-01.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Hello Pic"
+title:  "A Daily Photograph"
 date:   2018-11-07 19:45:31 +0530
 categories: "pic"
 author: "Dev C"
