Update image link in Kotlin post

--- a/_posts/2020-12-18-kotlin.markdown
+++ b/_posts/2020-12-18-kotlin.markdown
@@ -10,7 +10,7 @@ comments : true
 
 ---
 
-[![라이프모아 삼중 쿠션 중목 스포츠양말 7켤레 세트](https://image6.coupangcdn.com/image/affiliate/banner/29bb57e1eaa62d64365104f7f07ed42b@2x.jpg)](https://link.coupang.com/a/c0kxC1)
+[![라이프모아 삼중 쿠션 중목 스포츠양말 7켤레 세트](https://i.imgur.com/wQSX3qJ.png)](https://link.coupang.com/a/c0kxC1)
 
 ---
 
